--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <br>
 
         <div class="hidden">
-            <div class="Questions">
-                <form action=""></form>
+            <div class="questions">
+                
             </div>
 
             <!-- to be removed -->
